@@ -41,8 +41,8 @@ our @EXPORT = qw(
 	);
 
 # version: Defines actual version of Pandora Server for this module only
-my $pandora_version = "3.1rc1";
-my $pandora_build = "100515";
+my $pandora_version = "3.1";
+my $pandora_build = "100608";
 our $VERSION = $pandora_version." ".$pandora_build;
 
 # Setup hash
