@@ -1,3 +1,9 @@
+2010-06-08  Ramon Novoa  <rnovoa@artica.es>
+
+	* DEBIAN/control, DEBIAN/make_deb_package.sh,
+	  pandora_server.spec, lib/PandoraFMS/Config.pm: Updated version
+	  strings.
+
 2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* DEBIAN/postinst: fixed when the package DEB no have previus conf file.
